2009-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m50:
	- new snapshot

2009-06-02 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m49:
	- new snapshot
	- build for icu 4.2

openoffice-base-devel - 3.2_dev300_m48-1
- new snapshot
- added patch to fix broken epm packaging

openoffice-base-devel - 3.2_dev300_m42-1
- next snapshot

openoffice-base-devel - 3.2_dev300_m41-1
- next snapshot
- disable qadevooo again

openoffice-base-devel - 3.1_dev300_m40-1
- next snapshot
- use internal boost, #12983

openoffice-base-devel - 3.1_dev300_m39-1
- next snapshot

openoffice-base-devel - 3.1_dev300_m38-1
- next snapshot

openoffice-base-devel - 3.1_dev300_m35-1
- next snapshot

openoffice-base-devel - 3.1_dev300_m34-1
- new snapshot
- fixed mozilla plugin
- fixed menu entries to be "devel" again

openoffice-base-devel - 3.1_dev300_m33-2
- rebuild for python 2.6

openoffice-base-devel - 3.1_dev300_m33-1
- new devel snapshot
- synchronise with fixes made in the stable pkg

openoffice-base-devel - 3.0_dev300_m31-2
- use new OOo svn for checkout
- make dict deployement invisible
- fix build with new openjdk6 with rhino
- disable-evolution2 build

openoffice-base-devel - 3.0_dev300_m31-1
- fix build with system hsqldb-java
- fixes for dict deployement

openoffice-base-devel - 3.0_dev300_m30-1
- build with system hsqldb is broken
- move some deps to optdepends

openoffice-base-devel - 3.0_dev300_m29-2
- rebuild for icu4.0
- remove unneeded xmlsec makedep
- link soffice.bin/dev.bin

openoffice-base-devel - 3.0_dev300_m29-1
- build with openjdk6 (with rhino removed)
- patch cleanup
- build with system icu again
- build with system xmlsec again

openoffice-base-devel - 3.0_dev300_m26-1
- fix jvmfwk-gij-paths.diff
- fix buildfix-gcc43.diff
- fix buildfix-systemhunspell.diff
- fix fix-font-hinting.diff
- added --with-system-dicts
- disable binfilter, currently (smp build) broken 
  we don't need it anymore
- try to build with-system-boost again