@@ -2,11 +2,11 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-devel
-pkgver=3.2_dev300_m50
+pkgver=3.2_dev300_m51
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=('i686' 'x86_64')
-_OO_milestone=DEV300_m50
+_OO_milestone=DEV300_m51
 license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
@@ -15,10 +15,11 @@ optdepends=('java-runtime:	adds java support'
             'libcups:		adds printing support'
             'gconf:		adds additional gnome support'
             'nss:		adds support for signed files/macros'
-            'pstoedit:		translates PostScript and PDF graphics into other vector formats')
+            'pstoedit:		translates PostScript and PDF graphics into other vector formats'
+            'poppler:		for shipped pdfimport extension')
 makedepends=('bison' 'subversion' 'curl' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl'
              'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.0.11"
-             'apache-ant' 'cairo' 'gperf' 'libcups' 'pstoedit' 'gconf' "openjdk6>=1.5") # 'boost'
+             'apache-ant' 'cairo' 'gperf' 'libcups' 'poppler' 'pstoedit' 'gconf' "openjdk6>=1.5") # 'boost'
 provides=('openoffice-base')
 source=(${pkgname}-${_OO_milestone}.tar.gz
 	template.desktop
@@ -131,6 +132,7 @@ build() {
 	--with-system-libxslt\
 	--with-system-mozilla=libxul\
 	--with-system-neon\
+	--with-system-poppler\
 	--with-system-python\
 	--with-system-redland\
 	--with-system-sane-header\
@@ -153,6 +155,7 @@ build() {
  	--with-system-hsqldb \
 	--with-hsqldb-jar=/usr/share/java/hsqldb.jar \
 	--with-serializer-jar=/usr/share/java/serializer.jar \
+	--with-ant-home="/usr/share/java/apache-ant"\
 	--with-use-shell=bash\
 	 $EXTRAOPTS || return 1
 
