@@ -1,3 +1,9 @@
+2009-06-30 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2_dev300_m51:
+	- new snapshot
+	- build with system-poppler
+
 2009-06-13 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2_dev300_m50:
